force-app/main/default/objects/Case_Escalation__c/fields/Circle__c.field-meta.xml
<CustomField>
    <fullName>Circle__c</fullName>
    <label>Circle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>