force-app/main/default/objects/Case_Escalation__c/fields/GPON_ID__c.field-meta.xml
<CustomField>
    <fullName>GPON_ID__c</fullName>
    <description>For FTTP , GPON ID is required</description>
    <label>GPON ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>