force-app/main/default/objects/Case_Escalation__c/fields/Level1_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Level1_Contact_Email__c</fullName>
    <label>Level1 Contact Email</label>
    <type>Email</type>
</CustomField>