force-app/main/default/objects/Case_Escalation__c/fields/Level1_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Level1_Contact_Number__c</fullName>
    <label>Level1 Contact Number</label>
    <type>Phone</type>
</CustomField>