force-app/main/default/objects/Case_Escalation__c/fields/Level2_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Level2_Contact_Email__c</fullName>
    <label>Level2 Contact Email</label>
    <type>Email</type>
</CustomField>