force-app/main/default/objects/Case_Escalation__c/fields/Level2_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Level2_Contact_Name__c</fullName>
    <label>Level2 Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>