force-app/main/default/objects/Case_Escalation__c/fields/Level3_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Level3_Contact_Email__c</fullName>
    <label>Level3 Contact Email</label>
    <type>Email</type>
</CustomField>