force-app/main/default/objects/Case_Escalation__c/fields/Route_Name__c.field-meta.xml
<CustomField>
    <fullName>Route_Name__c</fullName>
    <label>Route Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>