force-app/main/default/objects/Case_Escalation__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <label>Site ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>