force-app/main/default/objects/Case_Escalation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Site_ID__c</columns>
    <columns>Circuit_ID__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Circle__c</columns>
    <columns>Level1_Contact_Email__c</columns>
    <columns>Level1_Contact_Name__c</columns>
    <columns>Level1_Contact_Number__c</columns>
    <columns>Level2_Contact_Email__c</columns>
    <columns>Level2_Contact_Name__c</columns>
    <columns>Level3_Contact_Email__c</columns>
    <columns>Level3_Contact_Name__c</columns>
    <columns>Level4_Contact_Email__c</columns>
    <columns>Level4_Contact_Name__c</columns>
    <columns>Level5_Contact_Email__c</columns>
    <columns>Level5_Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>Small Cell</value>
    </filters>
    <label>All</label>
</ListView>