force-app/main/default/objects/Case_Escalation__c/listViews/FTTH.listView-meta.xml
<ListView>
    <fullName>FTTH</fullName>
    <columns>NAME</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Level2_Contact_Email__c</columns>
    <columns>Level3_Contact_Email__c</columns>
    <columns>Level4_Contact_Email__c</columns>
    <columns>Circle__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>FTTH</value>
    </filters>
    <label>FTTH</label>
</ListView>