force-app/main/default/objects/Case_Escalation__c/listViews/OHFC_Escalations.listView-meta.xml
<ListView>
    <fullName>OHFC_Escalations</fullName>
    <columns>NAME</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Circle__c</columns>
    <columns>Level1_Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>OHFC</value>
    </filters>
    <label>OHFC Escalations</label>
</ListView>