force-app/main/default/objects/Case_Escalation__c/listViews/Small_Cell.listView-meta.xml
<ListView>
    <fullName>Small_Cell</fullName>
    <columns>NAME</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Site_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Level2_Contact_Email__c</columns>
    <columns>Level3_Contact_Email__c</columns>
    <columns>Level4_Contact_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>Small Cell</value>
    </filters>
    <label>Small Cell</label>
</ListView>