force-app/main/default/objects/Case_Escalation__c/listViews/UG.listView-meta.xml
<ListView>
    <fullName>UG</fullName>
    <columns>NAME</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Level2_Contact_Email__c</columns>
    <columns>Level3_Contact_Email__c</columns>
    <columns>Level4_Contact_Email__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>UG</value>
    </filters>
    <label>UG</label>
</ListView>